Added optional rule for Hard Dice Cap (20) and edge coin in roll dialog now also updates when choosing an edge boost

--- a/lang/en.json
+++ b/lang/en.json
@@ -1090,6 +1090,10 @@
       "defaultThreshold": {
         "hint": "Defines the default threshold used for any skill check",
         "name": "Default Threshold"
+      },
+      "hardDiceCap": {
+        "hint": "In standard play, there is a maximum of 20 dice for any test. No combination of abilities, skills, effects, or augments can exceed this limit during a roll. <br><b>Exception:</b> Pre-edging a test allows you to exceed the 20-dice cap with the bonus dice granted by Edge.",
+        "name": "Hard Dice Cap"
       }
     },
     "sin" : {
