Fixed translation issue with EN autosoft types

--- a/lang/en.json
+++ b/lang/en.json
@@ -137,7 +137,7 @@
       "pp": "PP",
       "perLevel": "per level"
     },
-    "autosoft_categories": {
+    "autosoft_types": {
       "clearsight": "Clearsight", 
       "electronic_warfare": "Electronic Warfare", 
       "evasion": "Evasion", 
