Added Athletics (Free Fall) specialization (#11)

--- a/lang/en.json
+++ b/lang/en.json
@@ -1117,6 +1117,7 @@
         "archery": "Archery",
         "climbing": "Climbing",
         "flying": "Flying",
+        "free_fall": "Free Fall",
         "gymnastics": "Gymnastics",
         "sprinting": "Sprinting",
         "swimming": "Swimming",
