Added german translation for Athletics (Free Fall) specialization

--- a/lang/de.json
+++ b/lang/de.json
@@ -1102,6 +1102,7 @@
         "archery": "Projektilwaffen",
         "climbing": "Klettern",
         "flying": "Fliegen",
+        "free_fall": "Freier Fall",
         "gymnastics": "Akrobatik",
         "sprinting": "Sprinten",
         "swimming": "Schwimmen",
