Bugfix on Add RCC button and new default funky name for newly created RCCs

--- a/lang/en.json
+++ b/lang/en.json
@@ -658,6 +658,7 @@
       "martialartstyle": "What's your style?",
       "martialarttech": "Technique, which technique?",
       "matrix": "Check out my deck!",
+      "rcc": "Minion Dominator X2000",
       "metamagic": "What have you learned?",
       "nanoware": "Seven or nine little machines",
       "quality": "What is your feat?",
