Update on Russian translation for new lines in 3.0.2
'free_fall' and 'rcc'

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -662,6 +662,7 @@
 			"martialartstyle": "Какой стиль?",
 			"martialarttech": "Техника? Какая техника?",
 			"matrix": "Зацени мою деку!",
+			"rcc": "Доминатор миньонов X2000",
 			"metamagic": "Чему научился?",
 			"nanoware": "Семь или девять миниатюрных машин",
 			"quality": "Чего умеешь?",
@@ -1115,6 +1116,7 @@
 				"archery": "Стрельба из лука",
 				"climbing": "Лазание",
 				"flying": "Полёт",
+				"free_fall": "Свободное падение",
 				"gymnastics": "Гимнастика",
 				"sprinting": "Рывок",
 				"swimming": "Плавание",
