Update ru.json to accomodate changes and additions from Pull Request #12

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -41,32 +41,33 @@
 	},
 	"TYPES":{
 		"Actor": {
-    		"Critter": "Существо",
-    		"NPC": "Пешка/Персонаж ведущего",
-    		"Player": "Персонаж игрока",
-    		"Spirit": "Дух",
-    		"Vehicle": "Транспортное средство/дрон"
+	    		"Critter": "Существо",
+	    		"NPC": "Пешка/Персонаж ведущего",
+	    		"Player": "Персонаж игрока",
+	    		"Spirit": "Дух",
+	    		"Vehicle": "Транспортное средство/дрон"
   		},
   		"Item": {
-    		"adeptpower": "Способность адепта",
-    		"critterpower": "Способность существа",
-    		"complexform": "Сложная форма",
-    		"contact" : "Знакомство",
-    		"echo": "Отголосок",
-    		"gear": "Снаряжение",
-    		"lifestyle" : "Уровень жизни",
-    		"martialartstyle": "Стиль боевого искусства",
-    		"martialarttech": "Техника боевого искусства",
-    		"metamagic": "Метамагия",
-    		"quality": "Качество",
-    		"ritual": "Ритуал",
-    		"sin" : "ГРЕХ",
-    		"skill": "Язык/Знание",
-    		"spell": "Заклинание",
-    		"weapon": "Оружие",
-			"focus": "Источник"
-  	}
-  },
+	    		"adeptpower": "Способность адепта",
+	    		"critterpower": "Способность существа",
+	    		"complexform": "Сложная форма",
+	    		"contact" : "Знакомство",
+	    		"echo": "Отголосок",
+			"focus": "Источник",
+	    		"gear": "Снаряжение",
+	    		"lifestyle" : "Уровень жизни",
+	    		"martialartstyle": "Стиль боевого искусства",
+	    		"martialarttech": "Техника боевого искусства",
+	    		"metamagic": "Метамагия",
+	    		"quality": "Качество",
+	    		"ritual": "Ритуал",
+	    		"sin" : "ГРЕХ",
+	    		"skill": "Язык/Знание",
+			"software": "Программа",
+	    		"spell": "Заклинание",
+	    		"weapon": "Оружие"
+	  	}
+	},
 	"attrib": {
 		"agi": "Проворство",
 		"agi_short": "ПРО",
@@ -137,6 +138,14 @@
 			"haslevel": "Есть уровни",
 			"pp": "ОС",
 			"perLevel": "за уровень"
+		},
+		"autosoft_types": {
+			"clearsight": "Чистый взгляд", 
+			"electronic_warfare": "Радиоэлектронная борьба", 
+			"evasion": "Уклонение", 
+			"maneuver": "Маневрирование", 
+			"stealth": "Скрытность", 
+			"targeting": "Прицеливание"
 		},
 		"critterpower": {
 			"actiontitle": "Действие",
@@ -365,8 +374,8 @@
 				"SKILLSOFT": "Софт навыка",
 				"SLAP_PATCHES": "Пластыри",
 				"SMALL_DRONES": "Маленькие дроны",
-				"SOFTWARE": "Программы",
 				"SNIPER_RIFLES": "Снайперские винтовки",
+				"SOFTWARE": "Программы",
 				"SPACECRAFT": "Космолёты",
 				"SPECIAL_WEAPONS": "Особое оружие",
 				"SUBMACHINE_GUNS": "Пистолеты-пулемёты",
@@ -400,6 +409,11 @@
 				"BASIC_PROGRAM": "Базовые программы",
 				"RIGGER_PROGRAM": "Программы риггера",
 				"AUTOSOFT": "Автософт",
+				"DATASOFT": "Инфософт",
+				"MAPSOFT": "Софт карт",
+				"SHOPSOFT": "Магазинный софт",
+				"TALENTSOFT": "Софт навыка",
+				"TEACHSOFT": "Обучающий софт",
 				"GROUND": "Наземные дроны",
 				"ANTHRO": "Антропоморфные дроны",
 				"AIR": "Воздушные дроны",
@@ -512,7 +526,9 @@
 			"attack_rating": "Значение атаки",
 			"attack_rating_short": "ЗА",
 			"attribute": "Характеристика",
+			"attack_rating_using_vehicle": "Значение атаки (ТС в качестве оружия)",
 			"base": "Баз.",
+			"belongs_to": "Принадлежит",
 			"column": {
 				"action": "Действие",
 				"count": "Счёт.",
@@ -537,7 +553,7 @@
 			"defense_rating": "Значение защиты",
 			"delete": "Удалить",
 			"device_mode": "Режим устройства",
-			"devRating": "Ртг. устройства",
+			"devRating": "Рейтинг устройства",
 			"dice": "Кубики",
 			"edit": "Редактировать",
 			"expertise": "Мастерство",
@@ -553,6 +569,7 @@
 			"level": "Есть уровни",
 			"mages": "Маги",
 			"max": "Максимум",
+			"mode_of_operation": "Режим",
 			"modifications": "Модификации",
 			"modifier": "Изм.",
 			"name": "Название",
@@ -565,13 +582,16 @@
 			"poolmod": "Модификатор набора",
 			"programs.short": "П",
 			"progSlots": "Ячейки прог.",
+			"rating": "Рейтинг",
 			"rating1": "Рейтинг 1",
 			"rating2": "Рейтинг 2",
 			"rating3": "Рейтинг 3",
-			"soaked": "Выдержано {soaked} из {threshold} урона",
 			"slower": "Затормозить",
+			"soaked": "Выдержано {soaked} из {threshold} урона",
 			"specialization": "Специализация",
+			"speed_detail": "Вы двигаетесь со скоростью {speed} км/ч ({speedPerTurn} метров в ход). Маш модификатор проверок равен {modifier}.",
 			"threshold": "Порог",
+			"type": "Тип",
 			"value": "Значение",
 			"wilddie": "Дикий кубик"
 		},
@@ -1000,12 +1020,14 @@
 			},
 			"matrix_devices": {
 				"add": "Добавить новое устройство",
+				"add_rcc": "Добавить новую риггерскую панель управления",
 				"column": {
 					"action": "Действие",
-					"devRating": "Рейт. Ус.",
+					"devRating": "Рейтинг устройства",
 					"name": "Название"
 				},
-				"title": "Устройства для Матрицы"
+				"title": "Устройства для Матрицы",
+				"title_rcc": "РПУ"
 			},
 			"metamagic": {
 				"add": "Добавить новую метамагию",
@@ -1020,6 +1042,9 @@
 			},
 			"qualities": "Качества",
 			"qualities_add": "Добавить",
+			"rigging": {
+				"title": "Риггинг"
+			},
 			"rituals": {
 				"add": "Добавить новый ритуал",
 				"column.threshold": "Порог",
@@ -1040,6 +1065,10 @@
 				"special": "Знаток"
 			},
 			"skills.language_add": "Добавить новый язык",
+			"software": {
+				"add": "Добавить новую программу",
+				"title": "Программа"
+			},
 			"spells": {
 				"add": "Добавить новое заклинание",
 				"column.alchemic": "Алх.",
@@ -1093,6 +1122,10 @@
 			"defaultThreshold": {
 				"hint": "Значение порога по умолчанию, которое используется для проверок навыков.",
 				"name": "Порог по умолчанию"
+			},
+			"hardDiceCap": {
+				"hint": "В обычных условиях на брсок не может приходиться более двадцати кубиков. Этот прредел нельзя преодолеть никаким сочетаниемм способностей, навыков, эффектов или доводов.<br><b>Исключение:</b> Потраченные перед проверкой очки Преимущества могут добавить кубики сверх предела.",
+				"name": "Предельное количество кубиков"
 			}
 		},
 		"sin": {
@@ -1104,6 +1137,12 @@
 			"superficially_plausible": "Подозрительно правдоподобный",
 			"highly_plausible": "Очень правдоподобный",
 			"second_life": "Вторая жизнь"
+		},
+		"softwareedit": {
+			"description": "Описание",
+			"category": "Категория",
+			"basic": "Базовая",
+			"hacking": "Для взлома"
 		},
 		"special": {
 			"astral": {
@@ -1317,6 +1356,7 @@
 		},
 		"vehicle": {
 			"action_label": "Управляемость / Атака или Защита ТС",
+			"initiative": "Инициатива ТС",
 			"mode_label": "Режим",
 			"mode": {
 				"manual": "Ручное управление",
@@ -1326,7 +1366,11 @@
 				"autonomous": "Автономное (не работает)"
 			},
 			"skill": {
-				"piloting": "Пилотирование"
+				"cracking": "Взлом",
+				"evasion": "Уклонение",
+				"perception": "Внимание",
+				"piloting": "Пилотирование",
+				"stealth": "Скрытность"
 			},
 			"type": {
 				"groundcraft": "Наземное",
