Added section in Equipment tab on Character sheet for Magical supply items (#16)

--- a/lang/en.json
+++ b/lang/en.json
@@ -676,6 +676,7 @@
       "genetics": "Everyone wants blue eyes",
       "focus": "Something to stay focussed",
       "lifestyle": "Card board box or suite?",
+      "magical": "Mojo feathers",
       "martialartstyle": "What's your style?",
       "martialarttech": "Technique, which technique?",
       "matrix": "Check out my deck!",
