Update ru.json for magic items

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -679,6 +679,7 @@
 			"genetics": "Всем хочется голубые глаза",
 			"focus": "Святой источник",
 			"lifestyle": "Картонная коробка или апартаменты?",
+			"magical": "Колдовские перья",
 			"martialartstyle": "Какой стиль?",
 			"martialarttech": "Техника? Какая техника?",
 			"matrix": "Зацени мою деку!",
