Added new column localization string (shadowrun6.label.column.nameAnimate) for animate objects like Contacts and SINs to accomodate languages that differentiate. (#17)

--- a/lang/en.json
+++ b/lang/en.json
@@ -530,6 +530,7 @@
         "action": "Action",
         "count": "#",
         "name": "Name",
+        "nameAnimate": "Name",
         "rating": "Rating"
       },
       "attack.short": "A",
