Update ru.json for separatre Name column titles

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -532,7 +532,8 @@
 			"column": {
 				"action": "Действие",
 				"count": "Счёт.",
-				"name": "Имя",
+				"name": "Название",
+				"nameAnimate": "Имя",
 				"rating": "Ртг."
 			},
 			"attack.short": "П",
