Update ru.json for Magical equipment section

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -41,32 +41,32 @@
 	},
 	"TYPES":{
 		"Actor": {
-	    		"Critter": "Существо",
-	    		"NPC": "Пешка/Персонаж ведущего",
-	    		"Player": "Персонаж игрока",
-	    		"Spirit": "Дух",
-	    		"Vehicle": "Транспортное средство/дрон"
+    		"Critter": "Существо",
+    		"NPC": "Пешка/Персонаж ведущего",
+    		"Player": "Персонаж игрока",
+    		"Spirit": "Дух",
+    		"Vehicle": "Транспортное средство/дрон"
   		},
   		"Item": {
-	    		"adeptpower": "Способность адепта",
-	    		"critterpower": "Способность существа",
-	    		"complexform": "Сложная форма",
-	    		"contact" : "Знакомство",
-	    		"echo": "Отголосок",
+    		"adeptpower": "Способность адепта",
+    		"critterpower": "Способность существа",
+    		"complexform": "Сложная форма",
+    		"contact" : "Знакомство",
+			"echo": "Отголосок",
 			"focus": "Источник",
-	    		"gear": "Снаряжение",
-	    		"lifestyle" : "Уровень жизни",
-	    		"martialartstyle": "Стиль боевого искусства",
-	    		"martialarttech": "Техника боевого искусства",
-	    		"metamagic": "Метамагия",
-	    		"quality": "Качество",
-	    		"ritual": "Ритуал",
-	    		"sin" : "ГРЕХ",
-	    		"skill": "Язык/Знание",
+    		"gear": "Снаряжение",
+    		"lifestyle" : "Уровень жизни",
+    		"martialartstyle": "Стиль боевого искусства",
+    		"martialarttech": "Техника боевого искусства",
+    		"metamagic": "Метамагия",
+    		"quality": "Качество",
+    		"ritual": "Ритуал",
+    		"sin" : "ГРЕХ",
+    		"skill": "Язык/Знание",
 			"software": "Программа",
-	    		"spell": "Заклинание",
-	    		"weapon": "Оружие"
-	  	}
+    		"spell": "Заклинание",
+    		"weapon": "Оружие"			
+		}
 	},
 	"attrib": {
 		"agi": "Проворство",
@@ -525,14 +525,14 @@
 			},
 			"attack_rating": "Значение атаки",
 			"attack_rating_short": "ЗА",
-			"attribute": "Характеристика",
 			"attack_rating_using_vehicle": "Значение атаки (ТС в качестве оружия)",
+			"attribute": "Характеристика",
 			"base": "Баз.",
 			"belongs_to": "Принадлежит",
 			"column": {
 				"action": "Действие",
 				"count": "Счёт.",
-				"name": "Название",
+				"name": "Название",                         
 				"nameAnimate": "Имя",
 				"rating": "Ртг."
 			},
@@ -934,7 +934,7 @@
 			"bought": "Гарантировать успехи",
 			"normal": "Бросить кубики"
 		},
-			"section": {
+		"section": {
 			"adeptpowers": {
 				"add": "Добавить новую способность",
 				"column.points": "ОС",
@@ -1011,6 +1011,7 @@
 				"add": "Добавить уровень жизни",
 				"title": "Уровни жизни"
 			},
+			"magical": "Волшебные",
 			"matrix_base": {
 				"overwatch": "Надзор"
 			},
@@ -1365,7 +1366,7 @@
 				"riggedAR": "Подключён (ДР)",
 				"riggedVR": "Подключён (ВР)",
 				"rcc": "через РПУ (не работает)",
-				"autonomous": "Автономное (не работает)"
+				"autonomous": "Автономное"
 			},
 			"skill": {
 				"cracking": "Взлом",
