--- a/lang/en.json
+++ b/lang/en.json
@@ -1008,6 +1008,7 @@
         "add": "Add new lifestyle",
         "title" : "Lifestyles"
       },
+      "magical": "Magical",
       "matrix_base": {
         "overwatch": "Overwatch"
       },
