RU statuses localisation

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1403,6 +1403,30 @@
 				"Target_is_not_a_life_form": "Цель не является формой жизни.",
 				"do_not_revert_damage": "Счётчик состояния переполнен. Не отменяйте этот урон при помощи кнопки в чате, он не рассчитается корректно."
 			}
+		},
+		"EFFECT": {
+			"sensorLock": "Замечен датчиком",
+			"chilled": "Заморозка",
+			"confused": "В замешательстве",
+			"corrosive": "Разъедание",
+			"cover": "Укрытие",
+			"dazed": "Ошеломление",
+			"deafened": "Глухота",
+			"fatigued": "Утомление",
+			"frightened": "Испуг",
+			"hazed": "Пелена",
+			"hobbled": "Хромота",
+			"immobilized": "Невидимость",
+			"invisible_improved": "Невидимость (Улучшенная)",
+			"nauseated": "Тошнота",
+			"panicked": "Паника",
+			"petrified": "Окаменение",
+			"poisoned": "Отравление",
+			"silent": "Немота",
+			"silent_improved": "Немота (Улучшенная)",
+			"stilled": "Усмирение",
+			"wet": "Сырость",
+			"zapped": "Электрошок"
 		}
 	},
 	"skill": {
