Update ru.json for changes made in #30

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1401,7 +1401,9 @@
 				"attack_with_no_AR": "Вы пытаетесь атаковать со значением атаки 0 (например, из-за расстояния).",
 				"apply_manually": "Примените урон вручную.",
 				"Target_is_not_a_life_form": "Цель не является формой жизни.",
-				"do_not_revert_damage": "Счётчик состояния переполнен. Не отменяйте этот урон при помощи кнопки в чате, он не рассчитается корректно."
+				"do_not_revert_damage": "Счётчик состояния переполнен. Не отменяйте этот урон при помощи кнопки в чате, он не рассчитается корректно.",
+				"No_actor_or_tokens_selected": "Назнечьте себе Персонажа Игрока или выберите токены перед броском.",
+				"You_are_not_owner_of_the_tokens": "Вы не являетесь владельцем выбранных токенов."
 			}
 		},
 		"EFFECT": {
